* 2014-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 34947: Check for a possible unrecoverable socket error when attempting to load mail settings (esp. standard folders); signal an empty value instead of throwing an error
 - Fix for bug 35023: Orderly deal with absent user permission bits

* 2014-10-17 - jan.bauerdick@open-xchange.com

 - Fix for bug 34987: Added properties 'com.openexchange.oauth.google.redirectUrl' and 'com.openexchange.oauth.google.productName'
                      to reloadable properties

* 2014-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 34995: Removed Dropbox and Box.com remnants from packaging
 - Fix for bug 34985: Restrictive reading of configuration and improved logging in case a .properties file contains a malformed Unicode
                      escape sequence
 - Fix for bug 34944: Ensure every threads holds its own IDBasedFileAccess instance
 - Fix for bug 34975: Log an exceeded rate limit only once per minute
 - Fix for bug 34922: Properly re-initialize config-cascade's "server" configuration provider on configuration reload trigger
 - Fix for bug 35001: Properly detect image URLs that contain curly braces
 - Fix for bug 34921: Do not generally apply HTML sanitizing to XML content

* 2014-10-15 - martin.herfurth@open-xchange.com

 - Fix for bug 34962: Mail notification on state changes for organizer.

* 2014-10-14 - marcus.klein@open-xchange.com

 - Fix for bug 34517: Put Kerberos tickets of session parameters into distributed session storage.

* 2014-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 34920: Do not close SQL resources on SearchIterator creation
 - Fix for bug 33862: Signal former folder type "7" for shared/public mail folders for USM-* clients

* 2014-10-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34896: Initialize member before first accessing it
 - Fix for bug 34897: Consider number of files in context for "amount"-type quota

* 2014-10-10 - thorben.betten@open-xchange.com
